--- a/index.html
+++ b/index.html
@@ -12,23 +12,25 @@
       width: 100%;
     }
     body {
-      display: flex;
-      flex-direction: row;
-      font-family: Arial, sans-serif;
-      background: linear-gradient(135deg, #7dd3fc, #a78bfa);
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      font-family: 'Comic Sans MS', 'Poppins', sans-serif;
+      background: linear-gradient(135deg, #ff9a9e, #fad0c4, #fad0c4, #fbc2eb, #a1c4fd);
+      background-size: 400% 400%;
+      animation: gradientShift 10s ease infinite;
       color: #111827;
     }
+    @keyframes gradientShift {
+      0% { background-position: 0% 50%; }
+      50% { background-position: 100% 50%; }
+      100% { background-position: 0% 50%; }
+    }
     .half {
-      flex: 1;
       display: flex;
       flex-direction: column;
       padding: 20px;
       box-sizing: border-box;
       background: rgba(255, 255, 255, 0.85);
-      border-right: 2px solid #ddd;
-    }
-    .half:last-child {
-      border-right: none;
     }
     .prompt {
       font-size: 1.4em;
@@ -42,7 +44,8 @@
       margin-bottom: 10px;
       resize: vertical;
       border-radius: 8px;
-      border: 1px solid #ccc;
+      border: 2px solid #ffb347;
+      background-color: #fff8f0;
     }
     button {
       padding: 10px;
@@ -51,39 +54,42 @@
       margin-bottom: 10px;
       border-radius: 8px;
       border: none;
-      background-color: #22c55e;
+      background-color: #ff7eb9;
       color: white;
       font-weight: bold;
+      transition: transform 0.1s ease, background-color 0.3s ease;
     }
     button:hover {
-      background-color: #16a34a;
+      background-color: #ff65a3;
+      transform: scale(1.05);
     }
     .responses {
       flex: 1;
       overflow-y: auto;
-      border-top: 1px solid #ccc;
+      border-top: 2px dashed #ffb347;
       padding-top: 10px;
     }
     .response {
-      background: #f9f9f9;
+      background: #fff0f6;
       padding: 8px;
-      border-radius: 4px;
+      border-radius: 12px;
       margin-bottom: 8px;
+      border: 1px solid #ffd6e8;
     }
   </style>
 </head>
 <body>
   <div class="half" id="left-half">
-    <div class="prompt">Which design process do you feel is your strength and why?</div>
+    <div class="prompt">🎯 Which design process do you feel is your strength and why?</div>
     <textarea id="strengthReply" placeholder="Type your answer here..."></textarea>
-    <button onclick="submitReply('strength')">Submit</button>
+    <button onclick="submitReply('strength')">✨ Submit</button>
     <div class="responses" id="strengthResponses"></div>
   </div>
 
   <div class="half" id="right-half">
-    <div class="prompt">Which design process do you feel you need to work on this year and why?</div>
+    <div class="prompt">🚀 Which design process do you feel you need to work on this year and why?</div>
     <textarea id="improveReply" placeholder="Type your answer here..."></textarea>
-    <button onclick="submitReply('improve')">Submit</button>
+    <button onclick="submitReply('improve')">🌟 Submit</button>
     <div class="responses" id="improveResponses"></div>
   </div>
 
